scripts/tests/errors/err_set_property_non_object.bu
// Test: set property on non-object type
// Expected: runtime error

var x = 42;
x.name = "hello";
